Cors setup for production